BE-03 - Öffentliches Poll-Summary vervollständigen
